--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:20-alpine AS build
+FROM dockerproxy.com/library/node:20-alpine AS build
 WORKDIR /app
 COPY package.json package-lock.json* yarn.lock* pnpm-lock.yaml* ./
 RUN npm ci --prefer-offline --no-audit --progress=false || npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:alpine
+FROM dockerproxy.com/library/nginx:alpine
 WORKDIR /usr/share/nginx/html
 COPY --from=build /app/dist/ .
 COPY nginx.conf /etc/nginx/conf.d/default.conf
