--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,7 @@ target/
 .kotlin
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-.idea/vcs.xml
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -38,3 +34,19 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### Node.js ###
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+### Frontend Build ###
+dist/
+dist-ssr/
+*.local
+
+### Backend Build ###
+backend/target/
+backend/*.jar
+backend/*.war
