--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.12.2",
     "element-plus": "^2.11.5",
+    "exam-frontend": "file:",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
