feat: 添加人脸识别功能模块
- 集成百度AI人脸识别API（V2/V3自动切换）
- 添加人脸照片上传和预览功能
- 添加考试前人脸验证流程
- 新增后端服务：FaceController, FaceRecognitionService
- 新增前端组件：FacePhotoUpload, FaceVerification, FaceTestPage
- 更新ExamList集成人脸验证
- 更新UserProfile添加人脸识别标签
- 添加配置文档：FACE_RECOGNITION_CONFIG.md, README_FACE_RECOGNITION.md
- 更新pom.xml添加百度AI SDK依赖
- 更新application.yml配置百度API凭证（已内置，开箱即用）
- 更新路由添加人脸测试页面
- 更新.gitignore忽略临时文件和数据库文件

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,19 @@ backend/*.war
 # Git无法索引Unix域套接字文件，排除以避免报错
 mysql-data/*.sock
 mysql-data/*.socket
+mysql-data/
+*.ibd
+*.dblwr
+
+### Temporary Files ###
+*.log
+*.tmp
+test_token.txt
+face_photo_base64.txt
+*_backup.vue
+
+### SQL Patches (temporary) ###
+sql_patch_fixed.sql
+update_passwords.sql
+update_student1_photo.sql
+import_face_photo.sql
