--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,15 @@ services:
       - ./backend/db_migration_teacher_college.sql:/docker-entrypoint-initdb.d/03-teacher-college-migration.sql:ro
       - ./backend/db_migration_teacher.sql:/docker-entrypoint-initdb.d/03-teacher-migration.sql:ro
       - ./backend/db_migration_error_book.sql:/docker-entrypoint-initdb.d/04-error-book-migration.sql:ro
+      - ./backend/db_patches/20251231_add_biz_teacher_subject.sql:/docker-entrypoint-initdb.d/05-teacher-subject-patch.sql:ro
+      - ./backend/db_patches/20251231_replace_course_with_subject.sql:/docker-entrypoint-initdb.d/06-subject-class-patch.sql:ro
+      - ./backend/db_patches/20251231_add_face_photo_to_biz_student.sql:/docker-entrypoint-initdb.d/07-face-photo-patch.sql:ro
+      - ./backend/db_patches/20251231_add_face_photo_to_biz_student.sql:/docker-entrypoint-initdb.d/07-face-photo-patch.sql:ro
+      - ./backend/db_patches/20251231_hide_tch_audit_for_admin.sql:/docker-entrypoint-initdb.d/08-hide-tch-audit.sql:ro
+      - ./backend/db_patches/20251231_separate_exam_practice_questions.sql:/docker-entrypoint-initdb.d/09-exam-bank-separation.sql:ro
+      - ./backend/db_patches/20251231_seed_exam_questions.sql:/docker-entrypoint-initdb.d/10-exam-bank-seed.sql:ro
+      - ./backend/db_patches/20251231_seed_exam_questions_compiler_database.sql:/docker-entrypoint-initdb.d/11-exam-bank-seed-compiler-db.sql:ro
+
     command: ["--default-authentication-plugin=mysql_native_password","--character-set-server=utf8mb4","--collation-server=utf8mb4_unicode_ci"]
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-proot"]
@@ -40,6 +49,9 @@ services:
 
       SECURITY_TOKEN_SECRET: change-me-dev
       SECURITY_CORS_ALLOWED_ORIGINS: http://localhost:8080,http://localhost:5173
+      BAIDU_FACE_API_KEY: placeholder
+      BAIDU_FACE_SECRET_KEY: placeholder
+      BAIDU_FACE_THRESHOLD: "60"
     ports:
       - "8083:8083"
 
