--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,7 +3,15 @@ server {
   server_name localhost;
   root /usr/share/nginx/html;
   index index.html;
+
+  location /assets/ {
+    expires 1y;
+    add_header Cache-Control "public, max-age=31536000, immutable" always;
+    try_files $uri =404;
+  }
+
   location / {
+    add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" always;
     try_files $uri $uri/ /index.html;
   }
   location /api/ {
