feat(student): 新增AI辅助解题功能（DeepSeek接入） - 前端：AiAssistant组件 + 练题/个性化题库集成 - 后端：/api/student/ai 聊天接口（SSE/非流式） - 配置：ai.deepseek.*（从环境变量读取）

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -35,3 +35,10 @@ security:
     secret: change-me-dev
   cors:
     allowed-origins: http://localhost:5173,http://localhost:8080
+
+# AI辅助解题配置
+ai:
+  deepseek:
+    api-key: ${AI_DEEPSEEK_API_KEY}
+    api-url: https://api.deepseek.com/chat/completions
+    model: deepseek-chat
