配置QQ邮箱用于注册验证码发送
- 更新邮箱为 1763690540@qq.com
- 添加授权码 junyntmffvxadjce
- 修改SMTP端口为587并启用STARTTLS
- 同时更新docker-compose.yml和application.yml
- 确保其他合作者拉取后可直接使用

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -11,16 +11,17 @@ spring:
       data-locations: classpath:seed.sql
   mail:
     host: smtp.qq.com
-    port: 465
-    username: ${SPRING_MAIL_USERNAME:}
-    password: ${SPRING_MAIL_PASSWORD:}
+    port: 587
+    username: ${SPRING_MAIL_USERNAME:1763690540@qq.com}
+    password: ${SPRING_MAIL_PASSWORD:junyntmffvxadjce}
     protocol: smtp
     properties:
       mail:
         smtp:
           auth: true
-          ssl:
+          starttls:
             enable: true
+            required: true
 
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
@@ -46,6 +47,6 @@ baidu:
 # AI辅助解题配置（DeepSeek）
 ai:
   deepseek:
-    api-key: ${AI_DEEPSEEK_API_KEY}
-    api-url: https://api.deepseek.com/chat/completions
-    model: deepseek-chat
+    api-key: ${AI_DEEPSEEK_API_KEY:dummy-key}
+    base-url: ${AI_DEEPSEEK_BASE_URL:https://api.deepseek.com}
+    model: ${AI_DEEPSEEK_MODEL:deepseek-chat}
