--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,13 +50,14 @@ services:
       DB_USER: root
       DB_PASSWORD: root
       SPRING_SQL_INIT_MODE: never
-      SPRING_MAIL_USERNAME: 3444505236@qq.com
-
+      SPRING_MAIL_USERNAME: 1763690540@qq.com
+      SPRING_MAIL_PASSWORD: junyntmffvxadjce
       SECURITY_TOKEN_SECRET: change-me-dev
       SECURITY_CORS_ALLOWED_ORIGINS: http://localhost:8080,http://localhost:5173
       BAIDU_FACE_API_KEY: ${BAIDU_FACE_API_KEY:-}
       BAIDU_FACE_SECRET_KEY: ${BAIDU_FACE_SECRET_KEY:-}
       BAIDU_FACE_THRESHOLD: ${BAIDU_FACE_THRESHOLD:-80.0}
+      AI_DEEPSEEK_API_KEY: ""
     ports:
       - "8083:8083"
 
