--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,5 +23,8 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_cookie_path / /;
+    proxy_buffering off;
+    proxy_read_timeout 600s;
   }
 }
