fix: 修复学生端AI助手功能
- 为AiAssistantController添加@PreAuthorize权限注解，修复403错误
- 修复前端AiAssistant组件token获取逻辑，支持从sessionStorage和localStorage获取
- 配置DeepSeek API密钥和端点
- 修复application.yml中的api-url配置项名称

问题：
1. 前端调用AI接口返回403 Forbidden
2. 后端日志显示token=null

原因：
1. AiAssistantController缺少@PreAuthorize('hasRole(STUDENT)')注解
2. 前端直接从localStorage获取token，但登录时token存储在sessionStorage

修复：
1. 添加PreAuthorize注解到流式和非流式AI接口
2. 修改前端token获取逻辑为优先sessionStorage，其次localStorage
3. 配置完整的DeepSeek API环境变量

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -48,5 +48,5 @@ baidu:
 ai:
   deepseek:
     api-key: ${AI_DEEPSEEK_API_KEY:dummy-key}
-    base-url: ${AI_DEEPSEEK_BASE_URL:https://api.deepseek.com}
+    api-url: ${AI_DEEPSEEK_API_URL:https://api.deepseek.com/chat/completions}
     model: ${AI_DEEPSEEK_MODEL:deepseek-chat}
