--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,12 +62,12 @@ services:
       - SPRING_SQL_INIT_MODE=never
       - SECURITY_TOKEN_SECRET=change-me-dev
       - SECURITY_CORS_ALLOWED_ORIGINS=http://localhost:8080,http://localhost:5173
-      - SPRING_MAIL_USERNAME=${SPRING_MAIL_USERNAME:-}
-      - SPRING_MAIL_PASSWORD=${SPRING_MAIL_PASSWORD:-}
-      - BAIDU_FACE_API_KEY=${BAIDU_FACE_API_KEY:-}
-      - BAIDU_FACE_SECRET_KEY=${BAIDU_FACE_SECRET_KEY:-}
-      - BAIDU_FACE_THRESHOLD=${BAIDU_FACE_THRESHOLD:-80.0}
-      - AI_DEEPSEEK_API_KEY=${AI_DEEPSEEK_API_KEY:-}
+      - SPRING_MAIL_USERNAME=1763690540@qq.com
+      - SPRING_MAIL_PASSWORD=junyntmffvxadjce
+      - BAIDU_FACE_API_KEY=iFloNzCZGwX1QSAPkCQcm0eg
+      - BAIDU_FACE_SECRET_KEY=jGwzBT9G2QQKGV5kecsxy5MBzkbShIk4
+      - BAIDU_FACE_THRESHOLD=80.0
+      - AI_DEEPSEEK_API_KEY=sk-b78603dc052244768e98c5ccd8be7ebb
     ports:
       - "8083:8083"
 
